# brandguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSING.md  README.md  pyproject.toml
docs/pricing/: index.html
src/brandguard/: __init__.py  assets.py  core.py  guidelines.py  licensing.py  service.py
tests/: conftest.py
tests/unit/: test_licensing.py  test_service.py
